--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ p {
     border-radius: 15px;
     cursor: pointer;
     padding-left: 6px;
+
 }
 
 #about {
@@ -77,6 +78,14 @@ h1 {
 }
 
 .amin {
+    accent-color: #ff050f;
+    color: #1a05ff;
+    font-family: Helvetica, sans-serif;
+    cursor: pointer;
+
+}
+
+.aminOld {
     background-color: #1a05ff;
     accent-color: #ff050f;
     color: #eeeeee;
@@ -128,13 +137,11 @@ h1 {
 
 }
 
-#title:hover {
-    animation-name: split;
-    animation-duration: .5s;
-}
+
 
 #titleText:hover:after {
     content: attr(data-hover);
+
 }
 
 .grow {
@@ -189,13 +196,16 @@ h1 {
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 10px;
     padding: 20px;
+
 }
 
 .gallery-item {
     cursor: pointer;
     overflow: hidden;
-    border: 1px solid #b1aaff;
+    border: 1px solid #c7c7c7;
     box-shadow: 0 0 5px #030020;
+    background-color: #e7e4ff;
+
 }
 
 .gallery-item img {
@@ -265,8 +275,8 @@ code {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
     /* Adjust the number of columns as needed */
-    gap: 20px;
     /* Adjust the gap between icons */
     max-width: 800px;
     /* Adjust the maximum width of the grid */
@@ -283,6 +293,70 @@ code {
     width: 100px;
     /* Adjust the icon size as needed */
     height: 100px;
+}
+
+
+/* Form */
+.container {
+    background-color: #f0effc;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    max-width: 400px;
+    width: 100%;
+}
+
+.container label {
+    font-size: 16px;
+
+    color: #030020;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+.container label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+    background-color: #eeeeee;
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #9a9999;
+    border-radius: 4px;
+}
+
+#contact button[type="submit"] {
+    background-color: #7c70ff;
+    color: #eeeeee;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s;
+}
+
+#contact button[type="submit"]:hover {
+    background-color: #4635ff;
+}
+
+#findMeOnline svg {
+    fill: #1a1a1b;
+}
+
+footer {
+    margin: 5rem;
+}
+
+footer p {
+    padding: 1rem;
 }
 
 @media only screen and (max-width: 768px) {
